--- a/source/style.css
+++ b/source/style.css
@@ -152,7 +152,7 @@ body {
             }
 
             option {
-                background-color: #2c3e50;
+                background-color: rgba(255, 255, 255, 0.95);
             }
 
             .reverse-btn {
