--- a/source/style.css
+++ b/source/style.css
@@ -153,8 +153,8 @@ body {
 
             option {
                 background-color: rgba(255, 255, 255, 0.95);
-                border-radius: 8px;
-                border: 1px solid rgba(44, 62, 80, 0.3);
+                border-radius: 8px !important;
+                border: 1px solid rgba(44, 62, 80, 0.3) !important;
             }
 
             .reverse-btn {
